src/components/messageSpace/messageSpace.css
.rustic-message-space {
  display: flex;
  flex-direction: column;
  flex: 1;
  gap: 16px;
  height: 100%;
  overflow: auto;
  position: relative;
  scroll-behavior: smooth;
}

.rustic-message-space .rustic-scroll-down-button {
  position: sticky;
  bottom: 16px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 10;
  width: fit-content;
}

